--- a/pacotes/backend/package.json
+++ b/pacotes/backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "spodwe2_todo_api",
+  "name": "@todo-app/backend",
   "version": "1.0.0",
   "main": "src/app.js",
   "type": "module",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "nodemon src/app.js",
     "dev": "nodemon src/app.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -18,7 +18,8 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "eslint": "^9.23.0",
