--- a/pacotes/frontend/package.json
+++ b/pacotes/frontend/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "spodwe2_todo_app",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@todo-app/frontend",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
