--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "concurrently": "^8.0.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.1.2",
     "react-router-dom": "^7.6.2"
   }
 }
